--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Đừng hút thuốc!
+title: Nga Là Con Mèo Đấy!
 email: huypq104@gmail.com
 phone: +841213866888
 description: > # this means to ignore newlines until "url:"
-  Xin đừng hút
+  Những điều bé nhỏ của Ngaooooo
 url: "http://www.ngaaaaalaconmeooooo" # the base hostname & protocol for your site
-author: Pham Quang Huy
+author: Nga Nguyen Thanh
 github_username: f-ma
 
 # Plugins
